[gd_scene load_steps=5 format=3 uid="uid://c4yvlwbvyqgx8"]

[ext_resource type="Script" path="res://scripts/levels/GameWorld.gd" id="1_lfmqj"]
[ext_resource type="PackedScene" uid="uid://b6x8y3r4puo4h" path="res://scenes/entities/Player.tscn" id="2_lfmqj"]
[ext_resource type="PackedScene" uid="uid://c8kqhpixj5qv" path="res://scenes/ui/StatusBar.tscn" id="3_lfmqj"]
[ext_resource type="PackedScene" uid="uid://dqnhsf8x4o5c6" path="res://scenes/ui/GameMenu.tscn" id="4_lfmqj"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_lfmqj")

[node name="TileMap" type="TileMap" parent="."]
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array()

[node name="Player" parent="." instance=ExtResource("2_lfmqj")]
position = Vector2(320, 320)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(352, 352)
current = true
smooth_enabled = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="StatusBar" parent="UILayer" instance=ExtResource("3_lfmqj")]

[node name="GameMenu" parent="UILayer" instance=ExtResource("4_lfmqj")]
visible = false

[node name="BattleScene" type="Control" parent="UILayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="UILayer/BattleScene"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="BattlePanel" type="Panel" parent="UILayer/BattleScene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0

[node name="Title" type="Label" parent="UILayer/BattleScene/BattlePanel"]
offset_left = 20.0
offset_top = 20.0
offset_right = 480.0
offset_bottom = 60.0
text = "战斗"
horizontal_alignment = 1

[node name="PlayerInfo" type="VBoxContainer" parent="UILayer/BattleScene/BattlePanel"]
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 200.0

[node name="Name" type="Label" parent="UILayer/BattleScene/BattlePanel/PlayerInfo"]
offset_right = 200.0
offset_bottom = 26.0
text = "勇者"

[node name="HP" type="Label" parent="UILayer/BattleScene/BattlePanel/PlayerInfo"]
offset_top = 30.0
offset_right = 200.0
offset_bottom = 56.0
text = "生命值: 1000/1000"

[node name="Attack" type="Label" parent="UILayer/BattleScene/BattlePanel/PlayerInfo"]
offset_top = 60.0
offset_right = 200.0
offset_bottom = 86.0
text = "攻击力: 10"

[node name="Defense" type="Label" parent="UILayer/BattleScene/BattlePanel/PlayerInfo"]
offset_top = 90.0
offset_right = 200.0
offset_bottom = 116.0
text = "防御力: 10"

[node name="EnemyInfo" type="VBoxContainer" parent="UILayer/BattleScene/BattlePanel"]
offset_left = 280.0
offset_top = 60.0
offset_right = 480.0
offset_bottom = 200.0

[node name="Name" type="Label" parent="UILayer/BattleScene/BattlePanel/EnemyInfo"]
offset_right = 200.0
offset_bottom = 26.0
text = "史莱姆"

[node name="HP" type="Label" parent="UILayer/BattleScene/BattlePanel/EnemyInfo"]
offset_top = 30.0
offset_right = 200.0
offset_bottom = 56.0
text = "生命值: 50/50"

[node name="Attack" type="Label" parent="UILayer/BattleScene/BattlePanel/EnemyInfo"]
offset_top = 60.0
offset_right = 200.0
offset_bottom = 86.0
text = "攻击力: 5"

[node name="Defense" type="Label" parent="UILayer/BattleScene/BattlePanel/EnemyInfo"]
offset_top = 90.0
offset_right = 200.0
offset_bottom = 116.0
text = "防御力: 2"

[node name="BattleLog" type="RichTextLabel" parent="UILayer/BattleScene/BattlePanel"]
offset_left = 20.0
offset_top = 210.0
offset_right = 480.0
offset_bottom = 260.0
text = "战斗开始！"

[node name="AutoButton" type="Button" parent="UILayer/BattleScene/BattlePanel"]
offset_left = 150.0
offset_top = 270.0
offset_right = 250.0
offset_bottom = 300.0
text = "自动战斗"

[node name="EscapeButton" type="Button" parent="UILayer/BattleScene/BattlePanel"]
offset_left = 270.0
offset_top = 270.0
offset_right = 370.0
offset_bottom = 300.0
text = "逃跑"